z-index fix

--- a/twittur/static/css/main.scss
+++ b/twittur/static/css/main.scss
@@ -897,7 +897,7 @@ $iconWidth:50px;
 	.profilEdit {
 		position: absolute;
 		right: 20px;
-		z-index: 99;
+		z-index: 2;
 	}
 	.profilMeta div {
 		margin-top: 10px; 
